# openFoamSensei

./: README.md
src/: Allwclean  Allwmake
src/sensei/: Allwclean  Allwmake  CMakeLists.txt  OFBridge.H  OFDataAdaptor.H  senseiDict  senseiFunctionObject.C  senseiFunctionObject.H  senseiInput.C  senseiInput.H
src/sensei/areaMesh/: foamVtkFaMeshAdaptor.H  senseiFaMesh.C  senseiFaMesh.H
src/sensei/cloud/: foamVtkCloudAdaptor.C  senseiCloud.C  senseiCloud.H
src/sensei/volMesh/: foamVtkFvMeshAdaptor.H  foamVtkFvMeshAdaptorFields.C  senseiFvMesh.C  senseiFvMesh.H
